<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/img_logo"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:layout_marginBottom="32dp"/>


        <!-- Usuario -->
        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label_user"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"/>

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/login_label_user"
            android:inputType="text"
            android:autofillHints="username"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/errorLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:paddingBottom="8dp"
            android:text=""
            />

        <!-- Contraseña -->
        <TextView
            android:id="@+id/labelPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label_pass"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"/>

        <LinearLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/passInput"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/login_label_pass"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/togglePass"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/eye"
                android:contentDescription="@string/img_pass"
                android:padding="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/errorPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:paddingBottom="8dp"
            android:text=""/>

        <!-- Recordar contraseña/Reset -->
        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/olvidaste_contrasena"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp" />

        <!-- Botón Login -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>